--- a/server/views/invoice.ejs
+++ b/server/views/invoice.ejs
@@ -248,7 +248,7 @@
 
                             </tr>
                         </thead>
-                        <tbody <% %> style="text-align: center; font-size: <%= data.TableBody %> ;">
+                        <tbody class="tbodys" <% %> style="text-align: center; font-size: <%= data.TableBody %> ;">
                                 <% if(data.billItemList.length != 0 ){ data.billItemList.forEach(function (i, index) {
                                     %>
                                     <tr>
