--- a/web1/src/app/admin/dashborad.component.css
+++ b/web1/src/app/admin/dashborad.component.css
@@ -5,3 +5,8 @@
 .content {
   background-size: 100%;
 }
+
+.first-letter {
+  color: #ff4081; /* Set the color of the first letter */
+  font-weight: bold; /* Optional: Make it bold */
+}
