--- a/web1/src/app/inventory/purchase/purchase.component.css
+++ b/web1/src/app/inventory/purchase/purchase.component.css
@@ -97,3 +97,7 @@ input::-webkit-inner-spin-button {
     width: 30px;
     border-radius: 3px
 }
+
+.first-letter {
+    color: #fff201; /* Color for the first letter on hover */
+  }
