--- a/web1/src/app/inventory/supplier/supplier.component.css
+++ b/web1/src/app/inventory/supplier/supplier.component.css
@@ -25,3 +25,9 @@ button:disabled .delete_icon {
     background-color: #bdbdbd;
     color: #878787;
 }
+
+
+ .first-letter {
+  color: #fff201; /* Color for the first letter on hover */
+}
+
