--- a/web1/src/app/sale/bill/bill.component.css
+++ b/web1/src/app/sale/bill/bill.component.css
@@ -306,6 +306,10 @@ button:disabled.whatsappfBill {
     border-radius: 5px;
 }
 
+.first-letter {
+    color: #fff201; /* Color for the first letter on hover */
+  }
+
 @media screen and (min-width: 1099px) and (max-width: 1300px) {
     .card {
         zoom: 70% !important
