--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -146,7 +146,7 @@
                         <mat-label>BarCode</mat-label>
                         <input matInput name="SearchBarCode" [(ngModel)]="Req.SearchBarCode"
                             (blur)="getSearchByBarcodeNo(); openModallocal(contentLocal,Req.SearchBarCode)" required #SearchBarCodecontrol autocomplete="off"
-                            appAutoFoucsDirectives inputMode="numeric">
+                            appAutoFoucsDirectives inputMode="numeric"  #barcodeInput>
                     </mat-form-field>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-6 col-8 mb-0">
@@ -475,13 +475,13 @@
                     <button *ngIf="BillItem.Manual === false &&  BillItem.PreOrder === false" type="submit"
                         [disabled]="!f1.valid || !fp.valid && this.BillItem.Quantity === 0 || this.GstTypeDis || this.BillItem.Barcode === null"
                         mat-raised-button color="primary"
-                        (click)="calculations('GSTPercentage', 'gst');notifyGst();">Add</button>
+                        (click)="calculations('GSTPercentage', 'gst');notifyGst();"><span class="first-letter">A</span>dd</button>
                     <button *ngIf=" BillItem.PreOrder === true" type="submit"
                         [disabled]="!f1.valid || this.GstTypeDis || !fp.valid || PerOrderBtn" mat-raised-button
                         color="primary">PreOder</button>
                     <button *ngIf="BillItem.Manual" type="submit"
                         [disabled]="!f1.valid || !fp.valid  || this.GstTypeDis " mat-raised-button
-                        color="primary" >Manual</button>
+                        color="primary" >M<span class="first-letter">a</span>nual</button>
                 </div>
             </div>
             <!-- services calclution -->
@@ -985,9 +985,9 @@
                 <div class="col-lg-12 col-md-12 col-12 mobbtn" >
                     <button *ngIf="this.id2 == 0" type="button" class=" me-md-3 me-0" mat-raised-button color="primary"
                         (click)="onSubmit(content1)"
-                        [disabled]="onSubmitFrom || (!billItemList.length && !serviceLists.length)">Save</button>
+                        [disabled]="onSubmitFrom || (!billItemList.length && !serviceLists.length)">Sav<span class="first-letter">e</span></button>
                     <button *ngIf="this.id2 != 0" type="button" class=" me-md-3 me-0" mat-raised-button color="primary"
-                        [disabled]="BillMaster.ID === null && !f2.valid" (click)="update()">Update</button>
+                        [disabled]="BillMaster.ID === null && !f2.valid" (click)="update()"><span class="first-letter">U</span>pdate</button>
                     <button type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
                         [disabled]="BillMaster.ID === null" (click)="openModal1(content1)">Payment</button>
                     <!-- <button type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
@@ -997,12 +997,12 @@
                     <button type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
                         [disabled]="BillMaster.ID === null" (click)="openModal13(content13)">Fitter Order</button>
                         <button type="button" mat-raised-button color="primary"
-                        [disabled]="BillMaster.ID === null" (click)="billPrint('Invoice')" > Receipt</button>
+                        [disabled]="BillMaster.ID === null" (click)="billPrint('Invoice')" > <span class="first-letter">R</span>eceipt</button>
                         <!-- <button type="button" (click)="billPrints('Invoice')" class="small_big_Btn"> S</button>
                         <button type="button" (click)="billPrintB('Invoice')" class="small_big_Btn "> B</button> -->
 
                     <button type="button" class=" me-md-0 me-0 ms-md-3 ms-0"  mat-raised-button color="primary"
-                    [disabled]="BillMaster.ID === null" (click)="billPrint('Receipt')"> Invoice</button>
+                    [disabled]="BillMaster.ID === null" (click)="billPrint('Receipt')"> <span class="first-letter">I</span>nvoice</button>
                         <!-- <button type="button" (click)="billPrints('Receipt')" class="small_big_Btn"> S</button>
                         <button type="button" (click)="billPrintB('Receipt')" class="small_big_Btn "> B</button> -->
 
@@ -1018,10 +1018,10 @@
                         <!-- [disabled]="this.BillLink == ''" -->
                    
 
-                    <button *ngIf="this.company.WhatsappMsg == 'true'"  (click)="sendWhatsapp('bill')" class="bgRemove whatsappBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i></button>
-                    <button class="bgRemove ms-0 me-0"><i class="fa-solid fa-envelope EmailBill"></i></button>
-                    <button *ngIf="this.company.WhatsappMsg == 'true'" [disabled]="this.BillLink == ''" (click)="sendWhatsapp('Fbill')" class="bgRemove whatsappfBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i> Final</button>
-                    <button *ngIf="this.company.WhatsappMsg == 'true'" [disabled]="!this.BillMaster.InvoiceNo" (click)="sendWhatsapp('Textbill')" class="bgRemove whatsappfBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i> Text</button>
+                    <button type="button" *ngIf="this.company.WhatsappMsg == 'true'"  (click)="sendWhatsapp('bill')" class="bgRemove whatsappBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i></button>
+                    <button type="button" class="bgRemove ms-0 me-0"><i class="fa-solid fa-envelope EmailBill"></i></button>
+                    <button type="button" *ngIf="this.company.WhatsappMsg == 'true'" [disabled]="this.BillLink == ''" (click)="sendWhatsapp('Fbill')" class="bgRemove whatsappfBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i> Final</button>
+                    <button type="button" *ngIf="this.company.WhatsappMsg == 'true'" [disabled]="!this.BillMaster.InvoiceNo" (click)="sendWhatsapp('Textbill')" class="bgRemove whatsappfBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i> Text</button>
                 </div>
             </div>
         </form>
@@ -1291,7 +1291,7 @@
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>New Payment</mat-label>
                         <input type="number" min="0" style="font-size: 17px !important;" matInput name="PaymentAmount"
-                            [(ngModel)]="applyPayment.PaidAmount" [autocomplete]="false">
+                            [(ngModel)]="applyPayment.PaidAmount" [autocomplete]="false" >
                     </mat-form-field>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0"
