--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -23,27 +23,27 @@
             <div class="row " style="background:#d9d9d9;">
                 <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0 pr-2 pr-md-0 pl-2 pl-md-0 ">
                     <mat-form-field class="example-full-width mb-0">
-                        <mat-label>Invoice No.</mat-label>
+                        <mat-label>Invoice</mat-label>
                         <input matInput name="InvoiceNo" [(ngModel)]="BillMaster.InvoiceNo"
                             [disabled]="BillMaster.InvoiceNo" #InvoiceNoNocontrol autocomplete="false">
                     </mat-form-field>
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0">
                     <mat-form-field class="example-full-width mb-0">
-                        <mat-label>InvoiceDate</mat-label>
+                        <mat-label>Date</mat-label>
                         <input matInput name="BillDate" type="date" [(ngModel)]="BillMaster.BillDate" 
                         [disabled]="!this.billDateDisabled" autocomplete="false">
                     </mat-form-field>
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0">
                     <mat-form-field class="example-full-width mb-0">
-                        <mat-label>DeliveryDate</mat-label>
+                        <mat-label>Delivery</mat-label>
                         <input matInput name="DeliveryDate" type="date" [(ngModel)]="BillMaster.DeliveryDate" autocomplete="false">
                     </mat-form-field>
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0">
                     <mat-form-field class="example-full-width mb-0">
-                        <mat-label>Entry Type</mat-label>
+                        <mat-label>Type</mat-label>
                         <mat-select name="category" [(ngModel)]="category" required #Typecontrol>
                             <mat-option value="Product">Product</mat-option>
                             <mat-option value="Services">Service</mat-option>
@@ -70,7 +70,7 @@
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0 ">
                     <mat-form-field class="example-full-width mb-0">
-                        <mat-label>Employee Name</mat-label>
+                        <mat-label>Employee</mat-label>
                         <mat-select name="Employee" [(ngModel)]="BillMaster.Employee"
                             (selectionChange)="changeEmployee()" [disabled]="user.UserGroup !== 'CompanyAdmin'  &&  BillMaster.ID !== null
                             " #Employeecontrol>
@@ -84,7 +84,7 @@
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0">
                     <mat-form-field class="example-full-width mb-0">
-                        <mat-label>Tray No.</mat-label>
+                        <mat-label>Tray</mat-label>
                         <mat-select name="TrayNo" [(ngModel)]="BillMaster.TrayNo" #Typecontrol>
                             <mat-option value="null"></mat-option>
                             <mat-option *ngFor="let Tray of trayNoList let i = index;" [value]="Tray.Name">
@@ -142,14 +142,14 @@
             </div>
             <div class="row rowModify pt-2" *ngIf="category !== 'Services'">
                 <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0">
-                    <mat-form-field class="example-full-width mb-0">
-                        <mat-label>BarCode</mat-label>
+                    <mat-form-field class="example-full-width mb-0 " >
+                        <mat-label>BarCode </mat-label>
                         <input matInput name="SearchBarCode" [(ngModel)]="Req.SearchBarCode"
                             (blur)="getSearchByBarcodeNo(); openModallocal(contentLocal,Req.SearchBarCode)" required #SearchBarCodecontrol autocomplete="off"
-                            appAutoFoucsDirectives inputMode="numeric"  #barcodeInput>
+                            appAutoFoucsDirectives inputMode="numeric"  #barcodeInput >
                     </mat-form-field>
                 </div>
-                <div class="col-xl-2 col-lg-2 col-md-6 col-8 mb-0">
+                <div class="col-xl-3 col-lg-3 col-md-6 col-8 mb-0">
                     <!-- <mat-form-field class="example-full-width mb-0">
                         <mat-label>Search By Product Name</mat-label>
                         <input matInput name="searchString" [(ngModel)]="Req.searchString" #SearchStringNamecontrol
@@ -157,7 +157,7 @@
                     </mat-form-field> -->
 
                     <mat-form-field class="example-full-width">
-                        <mat-label>Search By Product Name</mat-label>
+                        <mat-label>Product Search</mat-label>
                         <input type="text"  aria-label="Text" matInput
                         name="searchString"  [formControl]="myControl" [matAutocomplete]="auto"
                                (input)="getSearchByString(myControl.value, 'Name')">
@@ -172,7 +172,7 @@
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-3 col-12 mb-0">
                     <mat-form-field class="example-full-width mb-0">
-                        <mat-label>Select By Product</mat-label>
+                        <mat-label>Select Product</mat-label>
                         <mat-select name="FieldType" [(ngModel)]="selectedProduct" (selectionChange)="getFieldList()"
                             required #Typecontrol>
                             <mat-option>
@@ -192,12 +192,12 @@
                         </mat-error>
                     </mat-form-field>
                 </div>
-                <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0 pt-3">
+                <!-- <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0 pt-3">
                     <mat-slide-toggle name="ShopMode" [(ngModel)]="ShopMode" color="primary"
                         [ngModelOptions]="{standalone: true}" #ShopModecontrol class="example-margin"
                         style="color:#ff651e;" (change)="shopAll()">All Shops
                     </mat-slide-toggle>
-                </div>
+                </div> -->
                 <div class="col-xl-6 col-lg-6 col-md-9 col-8 mb-0"
                     *ngIf="( selectedProduct !== '' || selectedProduct !== undefined || selectedProduct !== null )">
                     <mat-form-field class="example-full-width mb-0">
@@ -300,6 +300,12 @@
                             <input matInput type="date" name="ProductExpDate" [(ngModel)]="BillItem.ProductExpDate">
                         </mat-form-field>
                     </div> -->
+                    <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0" *ngIf="showProductExpDate == true">
+                        <mat-form-field class="example-full-width mb-0">
+                            <mat-label>ProductExpDate</mat-label>
+                            <input matInput type="date" name="ProductExpDate" [(ngModel)]="BillItem.ProductExpDate">
+                        </mat-form-field>
+                    </div>
                     <div *ngIf="selectedProduct?.toUpperCase() === 'LENS' || selectedProduct?.toUpperCase() === 'CONTACT LENS'"
                         class="col-xl-1 col-lg-1 col-md-3 col-sm-12 mb-0">
                         <mat-form-field class="example-full-width mb-0">
@@ -334,37 +340,37 @@
 
         <form #f1="ngForm" (ngSubmit)="addItem()">
             <div class="row row rowModify " *ngIf="category !== 'Services' && BillItem.Manual === false">
-                <div class="col-xl-4 col-lg-4 col-md-9 col-8 mb-0">
+                <!-- <div class="col-xl-4 col-lg-4 col-md-9 col-8 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Product Name</mat-label>
                         <input matInput style="color: rgb(255 0 0) !important;font-weight: 800;" name="ProdName" [(ngModel)]="BillItem.ProductName"
                             [disabled]=true>
                     </mat-form-field>
-                </div>
+                </div> -->
                 <!-- <div class="col-xl-1 col-lg-1 col-md-2 col-sm-12 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Barcode</mat-label>
                         <input style="color: rgb(255 0 0);" matInput name="ProdBarcode" [(ngModel)]="BillItem.Barcode" [disabled]=true>
                     </mat-form-field>
                 </div> -->
-                <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0">
+                <!-- <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Available</mat-label>
                         <input matInput type="number" min="0" style="color: rgb(255 0 0) !important;font-weight: 800;" name="BarCodeCount"
                             [(ngModel)]="searchList.BarCodeCount" [disabled]=true>
                     </mat-form-field>
-                </div>
-                <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0" *ngIf="showProductExpDate == true">
+                </div> -->
+                <!-- <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0" *ngIf="showProductExpDate == true">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>ProductExpDate</mat-label>
                         <input matInput type="date" name="ProductExpDate" [(ngModel)]="BillItem.ProductExpDate">
                     </mat-form-field>
-                </div>
+                </div> -->
             </div>
             <div class="row mt-3" *ngIf="category !== 'Services'">
                 <div class="col-xl-1 col-lg-1 col-md-2 col-3 mb-0 col-1Modify">
                     <mat-form-field class="example-full-width mb-0">
-                        <mat-label>Unit Price</mat-label>
+                        <mat-label>Price</mat-label>
                         <input matInput type="number" min="0" name="UnitPrice" [(ngModel)]="BillItem.UnitPrice" required
                             (blur)="calculations('UnitPrice', 'subTotal')" #UnitPricecontrol [autocomplete]="false" [disabled]="(user.SalePermission == 'false' && BillItem.Manual == false) && user.UserGroup != 'CompanyAdmin'">
                         <mat-error>
@@ -385,11 +391,15 @@
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-2 col-3 mb-0 col-1Modify">
                     <mat-form-field class="example-full-width mb-0">
-                        <mat-label>Quantity</mat-label>
+                        <mat-label>Qty / Available </mat-label>
+                        <div class="d-flex">
                         <input matInput name="Quantity" type="number" min="1" [(ngModel)]="BillItem.Quantity"
                             type="number"
                             (blur)="calculations('DiscountPercentage', 'discount');calculations('Quantity', 'subTotal');calculations('GSTPercentage', 'gst');calculations('TotalAmount', 'total');checkqtyloaction()"
-                            required #Quantitycontrol [autocomplete]="false" [disabled]="locQtyDis == false">
+                            required #Quantitycontrol [autocomplete]="false" [disabled]="locQtyDis == false"> /
+                            <input matInput type="number" min="0" style="color: rgb(255 0 0) !important;font-weight: 800;" name="BarCodeCount"
+                            [(ngModel)]="searchList.BarCodeCount" [disabled]=true>
+                            </div>
                         <mat-error>
                             Quantity is required
                         </mat-error>
@@ -604,20 +614,20 @@
                                 <th> <mat-checkbox type="checkbox" name="checked" (click)="changeProductStatusAll()"
                                         [(ngModel)]="checked"></mat-checkbox> </th>
                                 <th class="text-center">S.No</th>
-                                <th class="text-center">Action</th>
-                                <th class="text-center">HSNCode</th>
+                                <th class="text-center"></th>
+                                <th class="text-center">HSN</th>
                                 <th class="text-center">Barcode</th>
-                                <th class="text-center">ProductName</th>
-                                <th class="text-center">UnitPrice</th>
+                                <th class="text-center">Product</th>
+                                <th class="text-center">Price</th>
                                 <!-- <th class="text-center">PurchasePrice</th> -->
                                 <th class="text-center">Quantity</th>
-                                <th class="text-center" *ngIf="this.loginShop?.Discount === 'true'">DiscountPer</th>
+                                <th class="text-center" *ngIf="this.loginShop?.Discount === 'true'">Discount%</th>
                                 <th class="text-center" *ngIf="this.loginShop?.Discount === 'true'">DiscountAmt</th>
                                 <th class="text-center">SubTotal</th>
-                                <th class="text-center" *ngIf="this.loginShop?.GSTnumber === 'true'">TAXPer</th>
+                                <th class="text-center" *ngIf="this.loginShop?.GSTnumber === 'true'">TAX%</th>
                                 <th class="text-center" *ngIf="this.loginShop?.GSTnumber === 'true'">TAXAmt</th>
                                 <th class="text-center" *ngIf="this.loginShop?.GSTnumber === 'true'">TAXType</th>
-                                <th class="text-center">TotalAmt</th>
+                                <th class="text-center">Total</th>
                                 <th class="text-center">Remark</th>
                                 <th class="text-center">Warranty</th>
                                 <th class="text-center">Option</th>
